--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -23,3 +23,10 @@
   border-radius: 10px;
 
 }
+
+.loaderContainer {
+  position: absolute;
+  top: 500px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
